fixes bugs on safari on mobile

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ h2 {
   background-color: #ffda9d;
 } */
 
-a {
+.custom-link {
   display: inline-block;
   width: 150px;
   height: 50px;
@@ -148,11 +148,11 @@ a {
   margin-top: 2%;
 }
 
-a:visited {
+.custom-link:visited {
   color: #000000;
 }
 
-a::after {
+.custom-link::after {
   content: "";
   width: 0;
   height: 50px;
@@ -164,15 +164,15 @@ a::after {
   transition: 0.5s;
 }
 
-a:hover {
+.custom-link:hover {
   color: #fff;
 }
 
-a:hover::after {
+.custom-link:hover::after {
   width: 150px;
 }
 
-a:focus {
+.custom-link:focus {
   outline-color: black;
 }
 
@@ -238,6 +238,7 @@ a:focus {
 
 .socials-img {
   width: 100px;
+  height: 100px;
   margin: 10px;
 }
 
@@ -257,6 +258,7 @@ a:focus {
 
 .contact-info, .contact-info ul {
   list-style: none;
+  padding-left: 0;
 }
 
 .contact-info ul {
@@ -490,6 +492,10 @@ footer p {
 
   .contact-info ul {
     justify-content: space-between;
+  }
+
+  .contact-info ul, .contact-info {
+    padding-left: 5%;
   }
 
   .contact-section {
